[gd_scene load_steps=13 format=3 uid="uid://b222awqy5q2ev"]

[ext_resource type="Script" uid="uid://xay1xv8v4q01" path="res://code/components/wire_connect.gd" id="1_eugkd"]
[ext_resource type="PackedScene" uid="uid://c80fsqccc2hnu" path="res://scenes/connection.tscn" id="2_eugkd"]
[ext_resource type="PackedScene" uid="uid://djd85005dvf4k" path="res://scenes/components/signal_connection.tscn" id="3_eugkd"]

[sub_resource type="BoxShape3D" id="BoxShape3D_eugkd"]
size = Vector3(0.3, 0.1, 0.1)

[sub_resource type="CylinderMesh" id="CylinderMesh_4dt5m"]
top_radius = 0.05
bottom_radius = 0.05
height = 0.25
radial_segments = 8
rings = 1

[sub_resource type="BoxShape3D" id="BoxShape3D_3hq4m"]
size = Vector3(0.3, 0.1, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_31mo3"]
size = Vector3(0.1, 0.3, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_1aa6m"]
size = Vector3(0.1, 0.3, 0.1)

[sub_resource type="BoxShape3D" id="BoxShape3D_nrt3n"]
size = Vector3(0.1, 0.1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_wtfld"]
size = Vector3(0.1, 0.1, 0.3)

[sub_resource type="BoxShape3D" id="BoxShape3D_4dt5m"]
size = Vector3(0.1, 0.1, 0.1)

[sub_resource type="SphereMesh" id="SphereMesh_eugkd"]
radius = 0.07
height = 0.14

[node name="WireConnect" type="Node3D"]
script = ExtResource("1_eugkd")

[node name="Collision_X+" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.35, 0.25, 0.25)
shape = SubResource("BoxShape3D_eugkd")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Collision_X+"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.025000006, 0, 0)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="Collision_X-" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.15, 0.25, 0.25)
shape = SubResource("BoxShape3D_3hq4m")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Collision_X-"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.025000006, 0, 0)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="Collision_Y+" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.35, 0.25)
shape = SubResource("BoxShape3D_31mo3")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Collision_Y+"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025000006, 0)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="Collision_Y-" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.15, 0.25)
shape = SubResource("BoxShape3D_1aa6m")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Collision_Y-"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025000006, 0)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="Collision_Z+" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.35)
shape = SubResource("BoxShape3D_nrt3n")

[node name="MeshInstance3D5" type="MeshInstance3D" parent="Collision_Z+"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.025000006)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="Collision_Z-" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.15)
shape = SubResource("BoxShape3D_wtfld")

[node name="MeshInstance3D6" type="MeshInstance3D" parent="Collision_Z-"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, -0.025000006)
mesh = SubResource("CylinderMesh_4dt5m")
skeleton = NodePath("../..")

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)

[node name="Connection" parent="." instance=ExtResource("2_eugkd")]

[node name="Connectiony_X+" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.25, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connectiony_X-" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connectiony_Y+" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.5, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connectiony_Y-" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connectiony_Z+" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.5)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connectiony_Z-" type="CollisionShape3D" parent="Connection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0)
shape = SubResource("BoxShape3D_4dt5m")

[node name="SignalConnection" parent="." instance=ExtResource("3_eugkd")]

[node name="Connection_X+" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.25, 0.25)
shape = SubResource("BoxShape3D_4dt5m")
metadata/direction = "X+"

[node name="Connection_X-" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0.25)
shape = SubResource("BoxShape3D_4dt5m")
metadata/direction = ""

[node name="Connection_Y+" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.5, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connection_Y-" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0, 0.25)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connection_Z+" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.5)
shape = SubResource("BoxShape3D_4dt5m")

[node name="Connection_Z-" type="CollisionShape3D" parent="SignalConnection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0)
shape = SubResource("BoxShape3D_4dt5m")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.25, 0.25, 0.25)
mesh = SubResource("SphereMesh_eugkd")

[connection signal="area_shape_entered" from="Connection" to="." method="_on_connection_area_shape_entered"]
[connection signal="area_shape_exited" from="Connection" to="." method="_on_connection_area_shape_exited"]
[connection signal="body_shape_entered" from="Connection" to="." method="_on_connection_body_shape_entered"]
[connection signal="body_shape_exited" from="Connection" to="." method="_on_connection_body_shape_exited"]
[connection signal="area_shape_entered" from="SignalConnection" to="." method="_on_signal_connection_area_shape_entered"]
[connection signal="area_shape_exited" from="SignalConnection" to="." method="_on_signal_connection_area_shape_exited"]
